added record section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,43 @@
 
         </div>
     </header>
+    <main>
+        <!--  records section  -->
+        <section class="records">
+            <div >
+                <img class="my-pic" src="images/person.png" alt="">
 
+            </div>
+            <div class="record">
+                <h3 class="record-title">
+                    My failures of previous year
+                </h3>
+                <p class="record-des">
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.
+                </p>
+                <ul class="record-list">
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://kit.fontawesome.com/87a95c3249.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
