--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <!--  records section  -->
         <section class="records">
-            <div >
+            <div>
                 <img class="my-pic" src="images/person.png" alt="">
 
             </div>
@@ -45,6 +45,39 @@
                     <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
                     <li><i class="fa-solid fa-check"></i>Contrary to popular simply.</li>
                 </ul>
+            </div>
+        </section>
+        <!-- my plans section  -->
+        <section>
+            <h3 class="plan-head">My Plans</h3>
+            <div class="all-plans">
+                <div class="plan-title">
+                    <img src="images/icons/web.png" alt="">
+                    <h4 class="plan">Web Development</h4>
+                    <p>I want to start</p>
+                </div>
+                <div class="plan">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="plan-title">Javascript</h4>
+                    <p>I want to start</p>
+                </div>
+                <div class="plan">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h4 class="plan-title">Smoking Habit</h4>
+                    <p>I want to start</p>
+                </div>
+                <div class="plan">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h4 class="plan-title">ecommerce</h4>
+                    <p>I want to start</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="call-now">
+                <h3 class="call-title">Awlays keep a positive mindset</h3>
+            <button class="primary-btn">Call Now</button>
             </div>
         </section>
     </main>
