--- a/index.html
+++ b/index.html
@@ -81,7 +81,25 @@
             </div>
         </section>
     </main>
-
+<!-- footer section  -->
+<footer>
+    <section>
+        <div class="footer-container">
+            <div class="my-info">
+                <h3 class="info-title">Future</h3>
+                <p class="info-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="email-acc">Email : info@gmail.com</p>
+                <p class="phone">Phone : 01500 00 00 00</p>
+                <img class="icon" src="images/icons/fb.png" alt=""><img class="icon" src="images/icons/youtube.png" alt=""><img class="icon" src="images/icons/twitter.png" alt="">
+            </div>
+            <div class="subscribe-container">
+                <h4 class="subscribe-title">Subscribe</h4>
+                <input type="email" placeholder="Enter your email" class="input-email">
+                <button class="subs-btn">Subscribe</button>
+            </div>
+        </div>
+    </section>
+</footer>
 
 
 
